--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "mysql2": "^3.16.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "sqlite3": "^5.1.7"
   }
 }
