--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lavadero-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "^2.2.2",
     "cors": "^2.8.5",
-    "express": "^5.2.1",
+    "express": "^4.18.2",
     "mysql2": "^3.16.0",
     "pg": "^8.17.2",
     "qrcode": "^1.5.4",
